--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,22 @@
+# Core dependencies
 pandas==2.0.3
 numpy==1.24.3
 matplotlib==3.7.2
 seaborn==0.12.2
+
+# Statistics and time series
 statsmodels==0.14.0
-pymc==5.7.2
 scipy==1.11.1
-plotly==5.17.0
 arch==6.2.0
+
+# Bayesian modeling
+pymc==5.7.2
+arviz==0.16.1
+
+# Data visualization
+plotly==5.17.0
+jupyter==1.0.0
+
+# Utilities
+tqdm==4.65.0
+scikit-learn==1.3.0
